src/test/ui/rfc-2126-extern-absolute-paths/non-existent-2.rs
// edition:2018

fn main() {
    let s = ::xcrate::S; //~ ERROR can't find crate for `xcrate`
}
